[JENKINS-38598] rework render method for readability and flow error fixes

--- a/less/components/filterable-list.less
+++ b/less/components/filterable-list.less
@@ -2,7 +2,7 @@
     display: flex;
     flex-flow: column nowrap;
 
-    .FilterableList-empty {
+    .FilterableList-empty-text {
         padding: 8px;
         background-color: fade(@gray-lighter, 25%);
     }
